--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,15 +7,9 @@
     "extends": [
         "eslint:recommended",
         "plugin:react/recommended",
-        "prettier"
-    ],
-    "parserOptions": {
-        "ecmaVersion": "latest",
-        "sourceType": "module"
-    },
-    "plugins": [
-        "react",
-        "react-hooks"
+        "prettier",
+        "next",
+        "next/core-web-vitals"
     ],
     "rules": {
       "no-duplicate-imports": "error",
@@ -25,10 +19,5 @@
       "camelcase": "error",
       "line-comment-position": ["error",{"position":"above"}],
       "capitalized-comments": ["error","always"]
-    },
-    "settings":{
-      "import/resolver":{
-        "typescript":{}
-      }
     }
 }
