chore(imports): imports com @/ para pastas locais

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prepare": "husky",
+    "prepare": "husky || true",
     "commit": "git-cz"
   },
   "devDependencies": {
