--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,6 +2,11 @@
   "compilerOptions":{
     "baseUrl": ".",
     "paths":{
+      "@/components/*":["src/components/*"],
+      "@/api/*":["src/api/*"],
+      "@/utils/*":["src/utils/*"],
+      "@/mocks/*":["src/mocks/*"],
+      "@/hooks/*":["src/hooks/*"]
     }
   }
 }
