--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,9 @@
-NEXT_PUBLIC_API=http://localhost:8080
+BACKEND_HOST=localhost
+DB_HOST=database
+DB_PORT=5432
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=admin
+POSTGRES_DB=ecommerce
+
+NEXT_PUBLIC_API=http://${BACKEND_HOST}:8080
+SPRING_DATASOURCE_URL=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${POSTGRES_DB}
