--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prepare": "husky || true",
+    "prepare": "husky",
     "commit": "git-cz"
   },
   "devDependencies": {
@@ -35,7 +35,6 @@
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.13",
     "next": "^14.1.3",
     "react": "^18.2.0",
