--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -3,7 +3,8 @@ ARG IMAGE=maven:3.8-amazoncorretto-21-al2023
 # Cloning our source code
 FROM alpine:latest as checkout
 LABEL org.opencontainers.image.authors="Dante de Araújo"
-ENV GIT_ACCESS_TOKEN=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
+# ADD github_pat_ To the next token (GIT_ACCESS_TOKEN) to work, but dont commit with the complete code
+ENV GIT_ACCESS_TOKEN=11AFBAO7A0lTdXgsbX0C4N_mgBrW4ZDnMQVLgIXxZyApaDZAyZsXZJrp62xC1Up8J0SV43UHHQtK0cGGCG
 WORKDIR /app
 RUN apk --no-cache add git \
     && git clone https://dantearaujo1:${GIT_ACCESS_TOKEN}@github.com/PWEB-ECOMMERCE/Back.git backend
