--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-react": "^7.34.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^9.0.11",
+    "jsdoc": "^4.0.3",
     "prettier": "^3.2.5",
     "typescript": "^5.3.3"
   },
