--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "husky": "^9.0.11",
     "jsdoc": "^4.0.3",
     "prettier": "^3.2.5",
+    "prop-types": "^15.8.1",
     "typescript": "^5.3.3"
   },
   "dependencies": {
@@ -38,9 +39,11 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.13",
+    "formik": "^2.4.6",
     "next": "^14.1.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "yup": "^1.4.0"
   },
   "config": {
     "commitizen": {
