--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.13",
     "formik": "^2.4.6",
+    "js-cookies": "^1.0.4",
     "next": "^14.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
