feat(release): entrega 2

--- a/.env.development
+++ b/.env.development
@@ -2,7 +2,7 @@ BACKEND_HOST=localhost
 DB_HOST=database
 DB_PORT=5432
 POSTGRES_USER=postgres
-POSTGRES_PASSWORD=admin
+POSTGRES_PASSWORD=1234
 POSTGRES_DB=ecommerce
 
 NEXT_PUBLIC_API=http://${BACKEND_HOST}:8080
