--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -8,7 +8,7 @@ ENV GIT_ACCESS_TOKEN=11AFBAO7A0lTdXgsbX0C4N_mgBrW4ZDnMQVLgIXxZyApaDZAyZsXZJrp62x
 WORKDIR /app
 RUN apk --no-cache add git \
     && git clone https://dantearaujo1:${GIT_ACCESS_TOKEN}@github.com/PWEB-ECOMMERCE/Back.git backend \
-    && cd backend && git checkout feat/login
+    && cd backend
 
 # Downloading our dependencies
 FROM ${IMAGE} AS deps
