--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prepare": "husky",
+    "prepare": "husky || true",
     "commit": "git-cz"
   },
   "devDependencies": {
@@ -37,6 +37,7 @@
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.13",
     "formik": "^2.4.6",
     "js-cookies": "^1.0.4",
