--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.13",
+    "@mui/x-data-grid": "^7.13.0",
     "formik": "^2.4.6",
     "js-cookies": "^1.0.4",
     "next": "^14.1.3",
