--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "next": "^14.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.53.0",
     "yup": "^1.4.0"
   },
   "config": {
