--- a/package.json
+++ b/package.json
@@ -38,8 +38,11 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.15",
+    "@mui/lab": "6.0.0-beta.9",
     "@mui/material": "^5.15.13",
     "@mui/x-data-grid": "^7.13.0",
+    "@mui/x-date-pickers": "^7.17.0",
+    "dayjs": "^1.11.13",
     "formik": "^2.4.6",
     "js-cookies": "^1.0.4",
     "next": "^14.1.3",
