--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.0",
+    "react-to-print": "^2.15.1",
     "yup": "^1.4.0"
   },
   "config": {
